--- a/environments/staging/environment.yaml
+++ b/environments/staging/environment.yaml
@@ -15,7 +15,7 @@ app:
   maven:
     groupId: net.wasdev.wlp.sample
     artifactId: ferret
-    version: "1.1"
+    version: "1.2"
     type: war
 
   # Set minimum and maximum number of instances of the application. 
@@ -71,7 +71,7 @@ app:
   # 17 for IBM Semeru 17, or 21 for IBM Semeru 21. If not set, the service
   # tries to automatically detect the Java version for the application. If the
   # service is unable to detect the Java runtime, it defaults to Java 17.
-  java: 17
+  java: 
   
   # Set the name of the custom domain for the application.
   #host: my_custom_domain.io
